<resources>
    <string name="app_name">Pharmacy</string>
    <string name="todo">TODO</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name">Name</string>

    <string name="sign_button">Button</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="add_medi_btn">Add Medicine</string>
    <string name="edit_medicine">Edit Medicine</string>
    <string name="view_medicine">View Medicine</string>
    <string name="pharmacist">Pharmacist</string>

    <string-array name="ava">
        <item>Available</item>
        <item>Not Available</item>
    </string-array>
</resources>
